--- a/Ru.html
+++ b/Ru.html
@@ -3,10 +3,15 @@
 
 <head>
     <title>Table</title>
-<style>
+<style calculator-keys {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
+  } >
     td{
         border-radius: 5px;
-        background-color: rgb(245, 67, 97);
+        background-color: rgb(245, 67, 97)
     }
 </style>
 </head>
